supervised learning for neural network

--- a/Introduction to Deep Learning.ipynb
+++ b/Introduction to Deep Learning.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 什么是神经网络？\n",
+    "## 1. 什么是神经网络？\n",
     "\n",
     "神经网络是受大脑工作方式的启发而来的一种强大的学习算法。\n",
     "\n",
@@ -30,6 +30,27 @@
     "房价可能同时受到多个特征的影响，比如房屋大小、卧室数量、所在区域编码、所在区域收入水平。神经网络在这里为了预测房价，会自动地生成隐藏单元。我们只需要给定输入 $x$ 和输出 $y$\n",
     "\n",
     "![multiple neural network](img/Housing Price Prediction 2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 用于监督学习的神经网络\n",
+    "\n",
+    "在监督学习中，给定一组数据集以及正确的输出，我们认为输入和输出之间存在着某种关系。\n",
+    "\n",
+    "监督学习问题分为回归和分类两种。在回归问题中，需要预测连续型的输出值。而在分类问题中，需要预测离散型的输出值。\n",
+    "\n",
+    "下面有一些监督学习的例子：\n",
+    "\n",
+    "![examples of supervised learning](img/examples of supervised learning.png)\n",
+    "\n",
+    "神经网络有许多种不同的类型，比如**卷积神经网络 Convolution Neural Network(CNN)**常常用于图像类应用，而**循环神经网络 Recurrent Neural Network(RNN)**用于一维的序列数据，比如讲英语翻译为中文，或者将英语语音转为英文文本这样的中间临时组件。而对于自动驾驶来说，通常是混合的神经网络架构。\n",
+    "\n",
+    "结构化的数据通常有确定的含义，比如价格、年龄；而非结构化的数据指代的是像素、原始音频，文本等。\n",
+    "\n",
+    "![structured data and unstructured data](img/structured data and unstructured data.png)"
    ]
   },
   {
