why is deep learning taking off

--- a/Introduction to Deep Learning.ipynb
+++ b/Introduction to Deep Learning.ipynb
@@ -54,6 +54,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 深度学习爆发的原因\n",
+    "\n",
+    "最近几年深度学习的爆发，得益于：1）整个社会的信息化程度越来越高，产生了更多可用的数据；2）更强的计算能力；3）神经网络算法方面的创新。\n",
+    "\n",
+    "![Scale drives deep learning progress.png](img/Scale drives deep learning progress.png)\n",
+    "\n",
+    "要达到坐标右上方较高的算法表现力，需要考虑两个因素：1）训练足够大神经网络的能力；2）巨大的打标数据。\n",
+    "\n",
+    "训练神经网络的过程常常是迭代式的。\n",
+    "\n",
+    "![iterative process of training a neural network](img/iterative process of training a neural network.png)\n",
+    "\n",
+    "训练的过程可能会耗费非常多的时间，从而影响着生产力。更强的计算能力，可以为迭代、改进新算法助力。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
