--- a/Neural Network Basics.ipynb
+++ b/Neural Network Basics.ipynb
@@ -75,6 +75,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 1. 二分类\n",
+    "\n",
+    "在二分类问题中，输出结果是离散型的二值。\n",
+    "\n",
+    "例子：判定图片里是否包含猫\n",
+    "\n",
+    "这里的目标是训练一个分类器，将图像作为输入并表示为特征向量 $x$，预测对应的标签 $y$ 是1还是0。在这里0、1的含义是这张图片包含猫（1）或不包含猫（0）。\n",
+    "\n",
+    "![image to feature vector](img/image to feature vector.png)\n",
+    "\n",
+    "在计算机中图像通常被存储成三个独立的矩阵，分别对应着图像的红、绿、蓝三个通道。三个矩阵和图片的像素大小相同，比如上面这张图片为64像素X64像素，相应地，三个矩阵（RGB）也都是 $64 \\times 64$。\n",
+    "\n",
+    "矩阵中的值表示着像素中对应通道颜色的强度，三个矩阵中的所有值一起构成了 $n$ 维的特征向量。在模式识别和机器学习中，特征向量表示一个对象，在这个例子中，表示图片包含猫或不包含猫。\n",
+    "\n",
+    "要创建这个特征向量 $x$，所有的像素颜色强度将被重新整合。特征向量 $x$ 的维度为 $n_x = 64 \\times 64 \\times 3 = 12288$。\n",
+    "\n",
+    "![feature vector](img/feature vector.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
