--- a/Neural Network Basics.ipynb
+++ b/Neural Network Basics.ipynb
@@ -100,6 +100,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. 逻辑回归\n",
+    "\n",
+    "逻辑回归是一种解决监督学习中二分类问题的学习算法。逻辑学习的目标是最小化预测值和训练数据标签值之间的误差。\n",
+    "\n",
+    "依然是训练识别猫的图片的分类器为例，给定一个特征向量 $x$，逻辑回归算法将能够给出图片中包含猫的概率\n",
+    "\n",
+    "$$\\hat{y} = P(y=1|x), 其中0 \\leq \\hat{y} \\leq 1$$\n",
+    "\n",
+    "逻辑回归中包含以下参数：\n",
+    "\n",
+    "- 输入特征向量：$x \\in \\mathbb{R}^{n_x}$，其中 $n_x$ 是特征数\n",
+    "- 训练标签：$y \\in \\{0, 1\\}$\n",
+    "- 权重：$w \\in \\mathbb{R}^{n_x}$，其中 $n_x$ 是特征数\n",
+    "- 阈值：$b \\in \\mathbb{R}$\n",
+    "- 输出：$\\hat{y} = \\sigma(w^Tx+b)$\n",
+    "- Sigmoid函数：$s = \\sigma(w^Tx+b) = \\sigma(z) = \\frac{1}{1+e^{-z}}$\n",
+    "\n",
+    "![sigmoid function](img/sigmoid function.png)\n",
+    "\n",
+    "$(w^Tx+b)$ 是一个线性函数，由于这里我们需要一个概率表示，输出值需要在 $[0,1]$ 区间内，因此使用了Sigmoid函数。Sigmoid函数的值域为 $[0,1]$，如上图所示。\n",
+    "\n",
+    "观察Sigmoid函数的图像，可以看到如下一些性质：\n",
+    "\n",
+    "- 如果 $z$ 是一个非常大的正数，那么 $\\sigma(z)=1$\n",
+    "- 如果 $z$ 非常小，或者说是一个非常大的负数，那么 $\\sigma(z)=0$\n",
+    "- 如果 $z=0$，那么 $\\sigma(z) = 0.5$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
