Logistic Regression: Cost Function

--- a/Neural Network Basics.ipynb
+++ b/Neural Network Basics.ipynb
@@ -132,6 +132,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 逻辑回归的成本函数\n",
+    "\n",
+    "训练模型获得参数 $w$ 和 $b$，需要首先定义**成本函数 cost function**\n",
+    "\n",
+    "**损失函数 Loss function**:\n",
+    "\n",
+    "损失函数衡量着预测值($\\hat{y}^{(i)}$)和期望输出值($y^{(i)}$)之间的差异。换言之，损失函数计算单个训练样本的误差值。\n",
+    "\n",
+    "$$ L(\\hat{y}^{(i)}, y^{(i)}) = \\frac{1}{2}(\\hat{y}^{(i)} - y^{(i)})^2 $$\n",
+    "$$ L(\\hat{y}^{(i)}, y^{(i)}) = -(y^{(i)}log(\\hat{y}^{(i)}) + (1-y^{(i)})log(1-\\hat{y}^{(i)}))$$\n",
+    "\n",
+    "其中，第一个平方误差的损失函数，会造成非凸的优化目标，逻辑回归通常使用第二个Logloss作为损失函数。\n",
+    "\n",
+    "**成本函数 Cost function**:\n",
+    "\n",
+    "成本函数是整个训练集中每个训练样本的损失函数值的均值。最终找到的参数 $w$ 和 $b$ 应该似的全局的成本函数取得最小值。\n",
+    "\n",
+    "$$ J(w, b) = \\frac{1}{m}\\sum_{i=1}^m L(\\hat{y}^{(i)}, y^{(i)}) = -\\frac{1}{m}\\sum_{i=1}^m[y^{(i)}log(\\hat{y}^{(i)}) + (1-y^{(i)})log(1-\\hat{y}^{(i)})] $$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
