--- a/Neural Network Basics.ipynb
+++ b/Neural Network Basics.ipynb
@@ -71,7 +71,15 @@
     "- 节点表示输入、激活单元或输出\n",
     "- 变表示权重或截距\n",
     "\n",
-    "![examples of Standard deep learning representations](img/examples of Standard deep learning representations.png)"
+    "![examples of Standard deep learning representations](img/examples of Standard deep learning representations.png)\n",
+    "\n",
+    "### 0.3 特别注意！\n",
+    "\n",
+    "为了计算的便利，神经网络和传统机器学习在表示层面上，有这样两个显著的不同：\n",
+    "\n",
+    "- 相对于传统机器学习，神经网络的输入矩阵 $X$ 是转置过的 $n \\times m$ 矩阵，其中每一列是一个样本，每一行是一个特征。传统机器学习习惯上 $X$ 是一个 $m \\times n$ 矩阵，其中每一行是一个样本，每一列是一个特征。相应的，标签矩阵 $y$ 也经过了转置。\n",
+    "\n",
+    "- 在传统机器学习中，每个样本作为输入向量通常会加入一个 $x_0=1$ 的变量，使得输入矩阵成为 $m \\times (n+1)$ 的矩阵，从而输入向量和权重相乘的计算可以写作 $\\hat{y} = \\theta^Tx$。神经网络中通常将截距项和权重项分开，等同于 $b=\\theta_0$ 而 $w = [\\theta_1;\\theta_2;...;\\theta_n]$。"
    ]
   },
   {
@@ -150,7 +158,7 @@
     "\n",
     "**成本函数 Cost function**:\n",
     "\n",
-    "成本函数是整个训练集中每个训练样本的损失函数值的均值。最终找到的参数 $w$ 和 $b$ 应该似的全局的成本函数取得最小值。\n",
+    "成本函数是整个训练集中每个训练样本的损失函数值的均值。最终找到的参数 $w$ 和 $b$ 应该使全局的成本函数取得最小值。\n",
     "\n",
     "$$ J(w, b) = \\frac{1}{m}\\sum_{i=1}^m L(\\hat{y}^{(i)}, y^{(i)}) = -\\frac{1}{m}\\sum_{i=1}^m[y^{(i)}log(\\hat{y}^{(i)}) + (1-y^{(i)})log(1-\\hat{y}^{(i)})] $$"
    ]
