--- a/Neural Network Basics.ipynb
+++ b/Neural Network Basics.ipynb
@@ -164,6 +164,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 4. 梯度下降\n",
+    "\n",
+    "求成本函数的偏导，根据偏导和学习速率进行梯度更新。较为基础，不赘述。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
