chain rule of derivatives

--- a/Neural Network Basics.ipynb
+++ b/Neural Network Basics.ipynb
@@ -193,6 +193,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 7. 链式求导法则\n",
+    "\n",
+    "不赘述。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
