--- a/Neural Network Basics.ipynb
+++ b/Neural Network Basics.ipynb
@@ -169,38 +169,18 @@
     "collapsed": true
    },
    "source": [
-    "## 4. 梯度下降\n",
+    "## 4. 导数、偏导、链式求导法则\n",
     "\n",
-    "求成本函数的偏导，根据偏导和学习速率进行梯度更新。较为基础，不赘述。"
+    "复习一元函数导数、多元函数偏导、链式求导法则，不赘述。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. 导数\n",
+    "## 5. 梯度下降\n",
     "\n",
-    "复习一元函数导数的物理意义和数学定义，不赘述。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. 偏导\n",
-    "\n",
-    "复习多元函数偏导的物理意义和数学定义，不赘述。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## 7. 链式求导法则\n",
-    "\n",
-    "不赘述。"
+    "求成本函数的偏导，根据偏导和学习速率进行梯度更新。较为基础，不赘述。梯度下降的代码要注意用向量化取代for循环。"
    ]
   },
   {
