--- a/Neural Network Basics.ipynb
+++ b/Neural Network Basics.ipynb
@@ -180,7 +180,18 @@
    "source": [
     "## 5. 梯度下降\n",
     "\n",
-    "求成本函数的偏导，根据偏导和学习速率进行梯度更新。较为基础，不赘述。梯度下降的代码要注意用向量化取代for循环。"
+    "求成本函数的偏导，根据偏导和学习速率进行梯度更新。较为基础，不赘述。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 6. 向量化\n",
+    "\n",
+    "在用numpy写深度学习算法时，应当尽可能地避免使用for循环。numpy自带了很多方便的向量化操作，使用这些操作会比显式的for循环快得多。numpy底层的C或Fortran代码，会利用CPU的SIMD并行指令，在CPU层面实现单指令多数据流，从而更好地利用CPU的并行能力。同样的技巧也适用于GPU，事实上GPU对于处理这样SIMD指令的能力比CPU还强。"
    ]
   },
   {
