Neural Network Representation

--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -25,6 +25,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 2. 神经网络的表示\n",
+    "\n",
+    "输入层、隐藏层、输出层。在监督学习的环境中，输入层和输出层的数据是已有的，而隐藏层是无法观测到的变量。每一层的值可以用 $a^{[l]}$ 来表示，$a$ 代表激活activation，是本层的输出，同时也是给定到下一层的输入。模型的输入 $X$ 可以看做是 $a^{[0]}$。\n",
+    "\n",
+    "![Neural Network Representation](img/Neural Network Representation.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
