Computing a Neural Network's Output

--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -38,6 +38,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 神经网络的计算过程\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上面说到，逻辑回归的过程，其实就是一个神经元，包含线性组合和激活函数激活两个步骤。而神经网络的计算过程，可以看做是重复计算多次逻辑回归。\n",
+    "\n",
+    "![Computing a Neural Network's Output 1](img/Computing a Neural Network's Output 1.png)\n",
+    "![Computing a Neural Network's Output 2](img/Computing a Neural Network's Output 2.png)\n",
+    "\n",
+    "重复计算的过程，如果使用for循环来写，会十分低效。事实上，将每一层每个神经元的权重向量组合为权重矩阵，将截距标量组合为截距向量，可以大幅简化计算。\n",
+    "![Computing a Neural Network's Output 3](img/Computing a Neural Network's Output 3.png)\n",
+    "\n",
+    "在这个两层的神经网络中，完成对隐藏层的计算后，最终计算输出层，就又回到了一个四个特征的逻辑回归模型。\n",
+    "![Computing a Neural Network's Output 4](img/Computing a Neural Network's Output 4.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
