--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -62,6 +62,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. 针对多个训练样本的向量化\n",
+    "\n",
+    "在上面的图中，$x_1$, $x_2$ 等都是标量，也即单个实数。当有 $m$ 个训练样本时，上面的计算可能需要重复计算 $m$ 次。但通过将 $x_1$ 转为一个 $m$ 维的向量，将 $[x_1, x_2, x_3]$ 向量转为一个 $n \\times m$ 的矩阵，其他保持不变，可以避免for循环。\n",
+    "\n",
+    "![Vectorizing across multiple examples](img/Vectorizing across multiple examples.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
