Explanation for Vectorizied implementation

--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -73,6 +73,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. 向量化实现的解释\n",
+    "\n",
+    "![Explanation for vectorized implementation](img/Explanation for vectorized implementation.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
