--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -82,6 +82,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 6. 激活函数\n",
+    "\n",
+    "神经元的计算过程中，激活函数的选择可以是不仅限于sigmoid函数的其它非线性函数。\n",
+    "\n",
+    "**tanh函数（双曲函数）在实践中几乎总是比sigmoid函数更好**，尤其在当数据做了标准化均值为 $0$ 的情况。$tanh(z) = \\frac{e^z - e^{-z}}{e^z + e^{-z}}$，tanh函数其实是sigmoid函数拉伸并偏移之后的版本，其值域是 $(-1, 1)$。\n",
+    "\n",
+    "实际情况中，**神经网络几乎从不使用sigmoid函数作为激活函数**。唯一的例外是输出层，当需要输出 $(0, 1)$ 区间内的值，最终输出层的激活函数会是sigmoid函数。\n",
+    "\n",
+    "tanh函数和sigmoid函数的一个共同缺陷，是当 $z$ 的绝对值非常大的情况下，两个函数的梯度绝对值都会非常小，导致梯度下降的学习缓慢。为应对这个问题，在神经网络中非常流行的做法是使用ReLU函数（线性整流函数）。$ReLU(z) = \\max(0, z)$。ReLU函数大于0时梯度固定，小于0时梯度为0。其在0点的导数理论上不存在，但由于计算机的浮点数可以认为永远不等于0，所以在实际中并不影响。**ReLU函数几乎已经成为了目前神经网络的默认激活函数。**\n",
+    "\n",
+    "ReLU函数的缺陷是，当 $z<0$ 时梯度为0，在实际中这点没有太大影响。但为了解决这个问题，也有人提出了Leaky ReLU（带泄露整流函数）。Leaky ReLU在 $z<0$ 时，会分配一个非常小的梯度。**Leaky ReLU的理论效果会强于ReLU，但实际中还是ReLU的使用更为广泛**。\n",
+    "\n",
+    "ReLU和Leaky ReLU的共同有点是，对于绝大多数的点，梯度都相对比0大得多，这样算法的学习速度会比tanh函数和sigmoid函数快。\n",
+    "\n",
+    "![Activation functions](img/Activation functions.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
