Why do you need non-linear activation functions

--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -105,6 +105,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 7. 为什么神经网络需要非线性的激活函数\n",
+    "\n",
+    "如果去除神经元中的激活函数（或使用线性的激活函数），那么无论神经网络有多少层，最终的输出层都只会是输入层的线性组合。如果隐藏层使用线性激活函数，而最终的输出层使用sigmoid激活函数，那么这个模型就等同于逻辑回归。\n",
+    "\n",
+    "唯一可能会使用线性激活函数的情境，是当使用神经网络进行回归模型训练时，在最终的输出层上可能会使用线性激活函数（隐藏层依然是非线性的激活函数）。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
