--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -118,6 +118,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 8. 激活函数的导数\n",
+    "\n",
+    "在对神经网络的成本函数计算梯度的过程中，会需要对激活函数计算导数。\n",
+    "\n",
+    "![Sigmoid activation function](img/Sigmoid activation function.png)\n",
+    "![Tanh activation function](img/Tanh activation function.png)\n",
+    "![ReLU and Leaky ReLU](img/ReLU and Leaky ReLU.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
