--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -133,6 +133,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. 神经网络的梯度下降过程\n",
+    "\n",
+    "神经网络的梯度下降，和传统机器学习算法的过程非常类似。定义初始化参数 -> 根据模型进行计算预测结果 -> 根据预测结果和实际标签计算成本函数 -> 成本函数计算梯度 -> 使用梯度下降更新参数。重复整个流程直到梯度下降收敛。\n",
+    "\n",
+    "![Gradient descent for neural networks](img/Gradient descent for neural networks.png)\n",
+    "\n",
+    "初始化参数的方法后面会讲，在神经网络中需要随机初始化，按照0值来初始化会有问题；根据模型进行计算预测结果，就是前向传播的过程；成本函数则依据是回归（e.g. MSE）还是分类（e.g. Logloss）问题而定；梯度下降的过程，和传统机器学习算法完全一致；那么唯一的问题就是，如果计算神经网络的梯度，神经网络梯度的计算过程，就是反向传播。\n",
+    "\n",
+    "下面这张图直接给出了两层神经网络的梯度计算公式。\n",
+    "\n",
+    "![Formulas for computing derivatives](img/Formulas for computing derivatives.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
