--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -150,6 +150,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. 反向传播\n",
+    "\n",
+    "反向传播实际上还是求解偏导，神经网络求解偏导的过程之所以复杂，主要还是在于其求偏导的过程，需要应用矩阵微积分。\n",
+    "\n",
+    "TODO"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
