--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -161,6 +161,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. 随机初始化\n",
+    "\n",
+    "上面提到，在训练神经网络时，参数的随机初始化极其重要。逻辑回归的参数可以初始化为0，但如果神经网络的所有参数都初始化为0，梯度下降算法将无法正常运算。\n",
+    "\n",
+    "实际上截距项初始化为0是没问题的，会影响梯度下降过程的主要是将权重项初始化为0。当权重全部为0时，同一层的神经元，前向传播过程中其激活值会完全相同。而进行反向传播时，梯度也会相同。梯度下降一次迭代更新后，权重矩阵的每一行都会是相同的。继续循环下去，每一层各个神经元的激活值还是相同，神经网络成为多个相同神经元的叠加，就失去了意义。\n",
+    "\n",
+    "![What happens if you initialize weights to zero?](img/What happens if you initialize weights to zero.png)\n",
+    "\n",
+    "解决方案是对权重进行随机初始化（截距项依然可以按照0值进行初始化）。在实际操作中，通常将权重初始化为非常接近0的随机数，这样当使用tanh函数或sigmoid函数作为激活函数时，其梯度会相对比较大，梯度下降收敛的速度会快一些。\n",
+    "\n",
+    "![Random initialization](img/Random initialization.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
