--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -178,6 +178,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 12. Show Me The code\n",
+    "\n",
+    "在这里，我们将构建一个包含一层隐藏层的神经网络。我们会注意到，这个浅层神经网络模型和之前的逻辑回归有着巨大的差别。\n",
+    "\n",
+    "**通过这个编程练习，可以学到：**\n",
+    "- 实现一个包含单一隐藏层的二分类神经网络\n",
+    "- 使用非线性函数（例如tanh）作为激活函数的神经元\n",
+    "- 计算交叉熵损失\n",
+    "- 实现前向传播和后向传播"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.1 三方包\n",
+    "\n",
+    "首先，运行下面的代码块，来引入在这个编程练习中所需要的包。 \n",
+    "- [numpy](www.numpy.org) 是Python生态圈中进行科学计算的基础包。\n",
+    "- [sklearn](http://scikit-learn.org/stable/) 是Python生态区中一个简单而高效地处理数据挖掘和数据分析的工具包\n",
+    "- [matplotlib](http://matplotlib.org) 是Python生态圈中著名的绘图包。\n",
+    "- testCases 提供了一些测试用例，用来测试所写函数的准确性\n",
+    "- planar_utils 提供了一些在练习中会用到的实用函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Package imports\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from testCases_v2 import *\n",
+    "import sklearn\n",
+    "import sklearn.datasets\n",
+    "import sklearn.linear_model\n",
+    "from planar_utils import plot_decision_boundary, sigmoid, load_planar_dataset, load_extra_datasets\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "np.random.seed(1) # set a seed so that the results are consistent"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
