Neural Network model

--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -448,6 +448,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 12.4 神经网络模型\n",
+    "\n",
+    "逻辑回归在“鲜花数据集”上表现不好，接下来，我们会训练一个包含单一隐藏层的神经网络。\n",
+    "\n",
+    "**我们的模型表示如下**:\n",
+    "<img src=\"img/classification_kiank.png\" style=\"width:600px;height:300px;\">\n",
+    "\n",
+    "**数学表示**:\n",
+    "\n",
+    "对于一个样本 $x^{(i)}$:\n",
+    "$$z^{[1] (i)} =  W^{[1]} x^{(i)} + b^{[1] (i)}\\tag{1}$$ \n",
+    "$$a^{[1] (i)} = \\tanh(z^{[1] (i)})\\tag{2}$$\n",
+    "$$z^{[2] (i)} = W^{[2]} a^{[1] (i)} + b^{[2] (i)}\\tag{3}$$\n",
+    "$$\\hat{y}^{(i)} = a^{[2] (i)} = \\sigma(z^{ [2] (i)})\\tag{4}$$\n",
+    "$$y^{(i)}_{prediction} = \\begin{cases} 1 & \\mbox{if } a^{[2](i)} > 0.5 \\\\ 0 & \\mbox{otherwise } \\end{cases}\\tag{5}$$\n",
+    "\n",
+    "给定所有样本的预测值，就可以计算成本 $J$ ：\n",
+    "$$J = - \\frac{1}{m} \\sum\\limits_{i = 0}^{m} \\large\\left(\\small y^{(i)}\\log\\left(a^{[2] (i)}\\right) + (1-y^{(i)})\\log\\left(1- a^{[2] (i)}\\right)  \\large  \\right) \\small \\tag{6}$$\n",
+    "\n",
+    "**回顾**: 构建神经网络的整个步骤大致为:\n",
+    "    1. 定义神经网络的结构（有多少个输入单元，多少个隐藏单元等）\n",
+    "    2. 初始化模型的参数\n",
+    "    3. 循环:\n",
+    "        - 实现前向传播\n",
+    "        - 计算损失\n",
+    "        - 实现后向传播，获得梯度\n",
+    "        - 更新参数（梯度下降）\n",
+    "\n",
+    "通过我们会构建一系列辅助函数来计算上面三个步骤，之后再将其合并到一个函数，我们叫做 `nn_model()`。有了 `nn_model()` 并学得了正确的参数之后，就可以对新数据进行预测。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
