Defining the neural network structure

--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -483,6 +483,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 12.4.1 定义神经网络的结构\n",
+    "\n",
+    "**练习**: 定义三个变量:\n",
+    "    - n_x: 输入层的大小\n",
+    "    - n_h: 隐藏层的大小（按照上图的结构，设置为4）\n",
+    "    - n_y: 输出层的大小\n",
+    "\n",
+    "**提示**: 使用 X 和 Y 的shape 来确定 n_x 和 n_y。同时，硬编码 n_h 为4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: layer_sizes\n",
+    "\n",
+    "def layer_sizes(X, Y):\n",
+    "    \"\"\"\n",
+    "    Arguments:\n",
+    "    X -- input dataset of shape (input size, number of examples)\n",
+    "    Y -- labels of shape (output size, number of examples)\n",
+    "    \n",
+    "    Returns:\n",
+    "    n_x -- the size of the input layer\n",
+    "    n_h -- the size of the hidden layer\n",
+    "    n_y -- the size of the output layer\n",
+    "    \"\"\"\n",
+    "    ### START CODE HERE ### (≈ 3 lines of code)\n",
+    "    n_x = X.shape[0]\n",
+    "    n_h = 4\n",
+    "    n_y = Y.shape[0]\n",
+    "    ### END CODE HERE ###\n",
+    "    return (n_x, n_h, n_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The size of the input layer is: n_x = 5\n",
+      "The size of the hidden layer is: n_h = 4\n",
+      "The size of the output layer is: n_y = 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_assess, Y_assess = layer_sizes_test_case()\n",
+    "(n_x, n_h, n_y) = layer_sizes(X_assess, Y_assess)\n",
+    "print(\"The size of the input layer is: n_x = \" + str(n_x))\n",
+    "print(\"The size of the hidden layer is: n_h = \" + str(n_h))\n",
+    "print(\"The size of the output layer is: n_y = \" + str(n_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出** \n",
+    "\n",
+    "<table style=\"width:20%\">\n",
+    "  <tr>\n",
+    "    <td>**n_x**</td>\n",
+    "    <td> 5 </td> \n",
+    "  </tr>\n",
+    "  \n",
+    "    <tr>\n",
+    "    <td>**n_h**</td>\n",
+    "    <td> 4 </td> \n",
+    "  </tr>\n",
+    "  \n",
+    "    <tr>\n",
+    "    <td>**n_y**</td>\n",
+    "    <td> 2 </td> \n",
+    "  </tr>\n",
+    "  \n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
