--- a/Shallow Neural Network.ipynb
+++ b/Shallow Neural Network.ipynb
@@ -576,6 +576,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 12.4.2 初始化模型的参数\n",
+    "\n",
+    "**练习**: 实现函数 `initialize_parameters()`.\n",
+    "\n",
+    "**注意事项**:\n",
+    "- 确保参数的维度正确，需要的话可以参考上面的图片。\n",
+    "- 权重矩阵需要初始化为随机值\n",
+    "    - 使用: `np.random.randn(a,b) * 0.01` 来随机初始化维度为 (a,b) 的矩阵。\n",
+    "- 截距向量初始化为0. \n",
+    "    - 使用: `np.zeros((a,b))` 来初始化维度为 (a,b) 全零矩阵。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: initialize_parameters\n",
+    "\n",
+    "def initialize_parameters(n_x, n_h, n_y):\n",
+    "    \"\"\"\n",
+    "    Argument:\n",
+    "    n_x -- size of the input layer\n",
+    "    n_h -- size of the hidden layer\n",
+    "    n_y -- size of the output layer\n",
+    "    \n",
+    "    Returns:\n",
+    "    params -- python dictionary containing your parameters:\n",
+    "                    W1 -- weight matrix of shape (n_h, n_x)\n",
+    "                    b1 -- bias vector of shape (n_h, 1)\n",
+    "                    W2 -- weight matrix of shape (n_y, n_h)\n",
+    "                    b2 -- bias vector of shape (n_y, 1)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    np.random.seed(2) # we set up a seed so that your output matches ours although the initialization is random.\n",
+    "    \n",
+    "    ### START CODE HERE ### (≈ 4 lines of code)\n",
+    "    W1 = np.random.randn(n_h, n_x) * 0.01\n",
+    "    b1 = np.zeros((n_h, 1))\n",
+    "    W2 = np.random.randn(n_y, n_h) * 0.01\n",
+    "    b2 = np.zeros((n_y, 1))\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    assert (W1.shape == (n_h, n_x))\n",
+    "    assert (b1.shape == (n_h, 1))\n",
+    "    assert (W2.shape == (n_y, n_h))\n",
+    "    assert (b2.shape == (n_y, 1))\n",
+    "    \n",
+    "    parameters = {\"W1\": W1,\n",
+    "                  \"b1\": b1,\n",
+    "                  \"W2\": W2,\n",
+    "                  \"b2\": b2}\n",
+    "    \n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[-0.00416758 -0.00056267]\n",
+      " [-0.02136196  0.01640271]\n",
+      " [-0.01793436 -0.00841747]\n",
+      " [ 0.00502881 -0.01245288]]\n",
+      "b1 = [[ 0.]\n",
+      " [ 0.]\n",
+      " [ 0.]\n",
+      " [ 0.]]\n",
+      "W2 = [[-0.01057952 -0.00909008  0.00551454  0.02292208]]\n",
+      "b2 = [[ 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_x, n_h, n_y = initialize_parameters_test_case()\n",
+    "\n",
+    "parameters = initialize_parameters(n_x, n_h, n_y)\n",
+    "print(\"W1 = \" + str(parameters[\"W1\"]))\n",
+    "print(\"b1 = \" + str(parameters[\"b1\"]))\n",
+    "print(\"W2 = \" + str(parameters[\"W2\"]))\n",
+    "print(\"b2 = \" + str(parameters[\"b2\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table style=\"width:90%\">\n",
+    "  <tr>\n",
+    "    <td>**W1**</td>\n",
+    "    <td> [[-0.00416758 -0.00056267]\n",
+    " [-0.02136196  0.01640271]\n",
+    " [-0.01793436 -0.00841747]\n",
+    " [ 0.00502881 -0.01245288]] </td> \n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>**b1**</td>\n",
+    "    <td> [[ 0.]\n",
+    " [ 0.]\n",
+    " [ 0.]\n",
+    " [ 0.]] </td> \n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>**W2**</td>\n",
+    "    <td> [[-0.01057952 -0.00909008  0.00551454  0.02292208]]</td> \n",
+    "  </tr>\n",
+    "  \n",
+    "\n",
+    "  <tr>\n",
+    "    <td>**b2**</td>\n",
+    "    <td> [[ 0.]] </td> \n",
+    "  </tr>\n",
+    "  \n",
+    "</table>\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
