Forward Propagation in a Deep Network

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -19,6 +19,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 2. 深度神经网络中的前向传播\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "for \\, l &= 1, 2, ..., L: \\\\\n",
+    "Z^{[l]} &= W^{[l]}A^{[l-1]} + b^{[l]} \\\\\n",
+    "A^{[l]} &= g^{[l]}(Z^{[l]})\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
