Getting your matrix dimensions right

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -37,6 +37,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. 确定深度神经网络中各矩阵的维度\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "W^{[l]} &: (n^{[l]}, n^{[l-1]}) \\\\\n",
+    "b^{[l]} &: (n^{[l]}, 1) \\\\\n",
+    "dW^{[l]} &: (n^{[l]}, n^{[l-1]}) \\\\\n",
+    "db^{[l]} &: (n^{[l]}, 1) \\\\\n",
+    "Z^{[l]},A^{[l]} &: (n^{[l]}, m) \\\\\n",
+    "dZ^{[l]},dA^{[l]} &: (n^{[l]}, m) \\\\\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
