Why deep representations

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -55,6 +55,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. 为什么要用深度神经网路\n",
+    "\n",
+    "深度神经网络：逐层增加复杂度。\n",
+    "\n",
+    "- 人脸识别问题：检测边界 -> 检测器官 -> 检测面部；\n",
+    "\n",
+    "- 语音识别问题：底层的特征（比如音调上升或下降，白噪声等） -> 声音的基本单元（音位Phoneme） -> 单词 -> 句子；\n",
+    "\n",
+    "神经科学认为，人类大脑的工作流程也是从简单的检测功能构建起来，进而检测更复杂的内容。\n",
+    "\n",
+    "![Intuition about deep representation](img/Intuition about deep representation.png)\n",
+    "\n",
+    "电路理论和深度学习：要用浅层的神经网络实现深度神经网络同样的功能，需要浅层神经网络中具备相比深度神经网络指数级别多的神经元。\n",
+    "\n",
+    "- 一个例子：多个输入变量的XOR，深度神经网络需要 $O(logn)$ 级别的神经元；而双层（单隐藏层）神经网络需要 $O(2^n)$ 级别的神经元\n",
+    "\n",
+    "![Circuit theory and deep learning](img/Circuit theory and deep learning.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
