Building blocks of deep neural networks

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -78,6 +78,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. 深度神经网络的组成\n",
+    "\n",
+    "前向传播和后向传播，计算前向传播的过程中，缓存相应的变量，用于后续计算后向传播。\n",
+    "\n",
+    "![Forward and backward functions](img/Forward and backward functions.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
