Forward and Backward Propagation

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -26,7 +26,6 @@
    "source": [
     "## 2. 深度神经网络中的前向传播\n",
     "\n",
-    "\n",
     "$$\n",
     "\\begin{split}\n",
     "for \\, l &= 1, 2, ..., L: \\\\\n",
@@ -86,6 +85,26 @@
     "前向传播和后向传播，计算前向传播的过程中，缓存相应的变量，用于后续计算后向传播。\n",
     "\n",
     "![Forward and backward functions](img/Forward and backward functions.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. 前向传播和后向传播\n",
+    "\n",
+    "后向传播过程：\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "for \\, l &= L, L-1, ..., 1: \\\\\n",
+    "dZ^{[l]} &= dA^{[l]} * g^{[l]\\prime}(Z^{[l]}) \\\\\n",
+    "dW^{[l]} &= \\frac{1}{m}dZ^{[l]} \\cdot A^{[l-1]T} \\\\\n",
+    "db^{[l]} &= \\frac{1}{m}np.sum(dZ{[l]}, axis=1, keepdims=True) \\\\\n",
+    "dA^{[l-1]} &= W^{[l]T} \\cdot dZ^{[l]}\n",
+    "\\end{split}\n",
+    "$$\n",
+    "\n",
+    "![Summary](img/Summary.png)"
    ]
   },
   {
