Parameters vs Hyperparameters

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -108,6 +108,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. 参数和超参\n",
+    "\n",
+    "这部分和传统机器学习差别不大，唯一的区别可能是深度学习的超参相对更多。超参需要通过交叉验证来调。\n",
+    "\n",
+    "![What are hyperparameters](img/What are hyperparameters.png)\n",
+    "\n",
+    "应用深度学习是一个经验性的过程，意思是说，调节超参的过程，存在很多重复尝试的阶段。暂时也没有什么好的方法，预先知道超参的大致范围。\n",
+    "![Applied deep learning is a very empirical process](img/Applied deep learning is a very empirical process.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
