--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -137,6 +137,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 9. Show Me The Code\n",
+    "\n",
+    "之前我们构建了2层的神经网络，接下来我们将构建可以包含任意多层的深度神经网络。\n",
+    "\n",
+    "**通过这个编程练习，可以学到：**\n",
+    "- 使用诸如ReLU的非线性神经元来提升模型\n",
+    "- 构建更深层的神经网络（超过一个隐藏层）\n",
+    "- 实现一个易用的神经网络类\n",
+    "\n",
+    "**标记**:\n",
+    "- 上标 $[l]$ 表示第 $l^{th}$ 层相关的数据 \n",
+    "    - 举例：$a^{[L]}$ 是第 $L^{th}$ 层的激活值. $W^{[L]}$ 和 $b^{[L]}$ 是第 $L^{th}$ 层的参数。\n",
+    "- 上标 $(i)$ 表示第 $i^{th}$ 个样本相关的数据\n",
+    "    - 举例：$x^{(i)}$ 是第 $i^{th}$ 个训练样本。\n",
+    "- 下标 $i$ 表示向量中的第 $i^{th}$ 个值。\n",
+    "    - 举例：$a^{[l]}_i$ 表示第 $l^{th}$ 层的第 $i^{th}$ 个激活值。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9.1 三方包\n",
+    "\n",
+    "首先，运行下面的代码块，来引入在这个编程练习中所需要的包。 \n",
+    "- [numpy](www.numpy.org) 是Python生态圈中进行科学计算的基础包。\n",
+    "- [matplotlib](http://matplotlib.org) 是Python生态圈中著名的绘图包。\n",
+    "- dnn_utils 提供了一些辅助函数\n",
+    "- testCases 提供了一些测试用力，用来测试所写函数的准确性\n",
+    "- np.random.seed(1) 用来保证随机函数调用结果的一致性。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import h5py\n",
+    "import matplotlib.pyplot as plt\n",
+    "from testCases_v3 import *\n",
+    "from dnn_utils_v2 import sigmoid, sigmoid_backward, relu, relu_backward\n",
+    "\n",
+    "%matplotlib inline\n",
+    "plt.rcParams['figure.figsize'] = (5.0, 4.0) # set default size of plots\n",
+    "plt.rcParams['image.interpolation'] = 'nearest'\n",
+    "plt.rcParams['image.cmap'] = 'gray'\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "np.random.seed(1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
