Outline of the Assignment

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "## 5. 深度神经网络的组成\n",
     "\n",
-    "前向传播和后向传播，计算前向传播的过程中，缓存相应的变量，用于后续计算后向传播。\n",
+    "前向传播反向传播，计算前向传播的过程中，缓存相应的变量，用于后续计算反向传播。\n",
     "\n",
     "![Forward and backward functions](img/Forward and backward functions.png)"
    ]
@@ -91,9 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. 前向传播和后向传播\n",
+    "## 6. 前向传播和反向传播\n",
     "\n",
-    "后向传播过程：\n",
+    "反向传播过程：\n",
     "$$\n",
     "\\begin{split}\n",
     "for \\, l &= L, L-1, ..., 1: \\\\\n",
@@ -197,6 +197,36 @@
     "%autoreload 2\n",
     "\n",
     "np.random.seed(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 9.2 问题总览\n",
+    "\n",
+    "为了自行构建神经网络，需要首先实现一些“辅助函数”。这些辅助函数后面会用于构建一个两层的神经网络和一个L层的神经网络，主要包括如下：\n",
+    "\n",
+    "- 为两层神经网络和 $L$ 层神经网络初始化参数\n",
+    "- 实现前向传播（图中紫色的部分）\n",
+    "     - 完成前向传播步骤中线性组合的部分（输出 $Z^{[l]}$）\n",
+    "     - 使用已经给定了激活函数（relu/sigmoid）\n",
+    "     - 将上面两步结合为一个前向传播函数（LINEAR->ACTIVATION）\n",
+    "     - 计算 [LINEAR->RELU] 前向传播 L-1 次（从第1层到第L-1层），最后再计算一次 [LINEAR->SIGMOID]（第L层）。合并这两步，得到 L_model_forward 函数。\n",
+    "- 计算损失\n",
+    "- 实现反向传播（图中红色的部分）\n",
+    "     - 完成反向传播步骤中线性的部分\n",
+    "     - 使用已经给定了的激活函数的梯度（relu_backward/sigmoid_backward）\n",
+    "     - 将上面两步结合为一个反向传播函数（LINEAR->ACTIVATION）\n",
+    "     - 计算 [LINEAR->RELU] 反向传播 L-1 次，最后再计算一次 [LINEAR->SIGMOID]。合并这两步，得到 L_model_backward 函数。\n",
+    "- 更新参数\n",
+    "\n",
+    "<img src=\"img/final outline.png\" style=\"width:800px;height:500px;\">\n",
+    "<caption><center> **图 1**</center></caption><br>\n",
+    "\n",
+    "**注意** 对于每个前向传播函数，都有对应的反向传播函数。因此每一步前向传播模块都要保存一些值到缓存中。缓存中的值可以用于反向传播模块中计算梯度。"
    ]
   },
   {
