--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -230,6 +230,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9.3 初始化\n",
+    "\n",
+    "我们需要写两个辅助函数用于模型参数的初始化，分别对应两层神经网络和 $L$ 层神经网络。\n",
+    "\n",
+    "#### 9.3.1 两层神经网络\n",
+    "\n",
+    "**练习**: 创建一个两层神经网络并初始化参数。\n",
+    "\n",
+    "**指令**:\n",
+    "- 模型的结构为：*LINEAR -> RELU -> LINEAR -> SIGMOID*\n",
+    "- 权重矩阵需要随机初始化。用正确的矩阵维度调用 `np.random.randn(shape)*0.01`\n",
+    "- 截距向量使用0值初始化。调用 `np.zeros(shape)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: initialize_parameters\n",
+    "\n",
+    "def initialize_parameters(n_x, n_h, n_y):\n",
+    "    \"\"\"\n",
+    "    Argument:\n",
+    "    n_x -- size of the input layer\n",
+    "    n_h -- size of the hidden layer\n",
+    "    n_y -- size of the output layer\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your parameters:\n",
+    "                    W1 -- weight matrix of shape (n_h, n_x)\n",
+    "                    b1 -- bias vector of shape (n_h, 1)\n",
+    "                    W2 -- weight matrix of shape (n_y, n_h)\n",
+    "                    b2 -- bias vector of shape (n_y, 1)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    np.random.seed(1)\n",
+    "    \n",
+    "    ### START CODE HERE ### (≈ 4 lines of code)\n",
+    "    W1 = np.random.randn(n_h, n_x) * 0.01\n",
+    "    b1 = np.zeros((n_h, 1))\n",
+    "    W2 = np.random.randn(n_y, n_h) * 0.01\n",
+    "    b2 = np.zeros((n_y, 1))\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    assert(W1.shape == (n_h, n_x))\n",
+    "    assert(b1.shape == (n_h, 1))\n",
+    "    assert(W2.shape == (n_y, n_h))\n",
+    "    assert(b2.shape == (n_y, 1))\n",
+    "    \n",
+    "    parameters = {\"W1\": W1,\n",
+    "                  \"b1\": b1,\n",
+    "                  \"W2\": W2,\n",
+    "                  \"b2\": b2}\n",
+    "    \n",
+    "    return parameters    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[ 0.01624345 -0.00611756 -0.00528172]\n",
+      " [-0.01072969  0.00865408 -0.02301539]]\n",
+      "b1 = [[ 0.]\n",
+      " [ 0.]]\n",
+      "W2 = [[ 0.01744812 -0.00761207]]\n",
+      "b2 = [[ 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters = initialize_parameters(3,2,1)\n",
+    "print(\"W1 = \" + str(parameters[\"W1\"]))\n",
+    "print(\"b1 = \" + str(parameters[\"b1\"]))\n",
+    "print(\"W2 = \" + str(parameters[\"W2\"]))\n",
+    "print(\"b2 = \" + str(parameters[\"b2\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "       \n",
+    "<table style=\"width:80%\">\n",
+    "  <tr>\n",
+    "    <td> **W1** </td>\n",
+    "    <td> [[ 0.01624345 -0.00611756 -0.00528172]\n",
+    " [-0.01072969  0.00865408 -0.02301539]] </td> \n",
+    "  </tr>\n",
+    "\n",
+    "  <tr>\n",
+    "    <td> **b1**</td>\n",
+    "    <td>[[ 0.]\n",
+    " [ 0.]]</td> \n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>**W2**</td>\n",
+    "    <td> [[ 0.01744812 -0.00761207]]</td>\n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td> **b2** </td>\n",
+    "    <td> [[ 0.]] </td> \n",
+    "  </tr>\n",
+    "  \n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
