L-layer Neural Network

--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -355,6 +355,227 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9.3.2 L层神经网络\n",
+    "\n",
+    "L层深度神经网络的初始化会稍微复杂一些，因为我们现在有更多的权重矩阵和截距向量。在实现 `initialize_parameters_deep` 时，你需要保证每一层相关参数的维度正确。回忆一下， $n^{[l]}$ 表示 $l$ 层的神经元数量。因此假设输入 $X$ 是 $(12288, 209)$ 维度的矩阵时（包含 $m=209$ 个训练样本），那么：\n",
+    "\n",
+    "<table style=\"width:100%\">\n",
+    "\n",
+    "\n",
+    "    <tr>\n",
+    "        <td>  </td> \n",
+    "        <td> **Shape of W** </td> \n",
+    "        <td> **Shape of b**  </td> \n",
+    "        <td> **Activation** </td>\n",
+    "        <td> **Shape of Activation** </td> \n",
+    "    <tr>\n",
+    "    \n",
+    "    <tr>\n",
+    "        <td> **Layer 1** </td> \n",
+    "        <td> $(n^{[1]},12288)$ </td> \n",
+    "        <td> $(n^{[1]},1)$ </td> \n",
+    "        <td> $Z^{[1]} = W^{[1]}  X + b^{[1]} $ </td> \n",
+    "        \n",
+    "        <td> $(n^{[1]},209)$ </td> \n",
+    "    <tr>\n",
+    "    \n",
+    "    <tr>\n",
+    "        <td> **Layer 2** </td> \n",
+    "        <td> $(n^{[2]}, n^{[1]})$  </td> \n",
+    "        <td> $(n^{[2]},1)$ </td> \n",
+    "        <td>$Z^{[2]} = W^{[2]} A^{[1]} + b^{[2]}$ </td> \n",
+    "        <td> $(n^{[2]}, 209)$ </td> \n",
+    "    <tr>\n",
+    "   \n",
+    "       <tr>\n",
+    "        <td> $\\vdots$ </td> \n",
+    "        <td> $\\vdots$  </td> \n",
+    "        <td> $\\vdots$  </td> \n",
+    "        <td> $\\vdots$</td> \n",
+    "        <td> $\\vdots$  </td> \n",
+    "    <tr>\n",
+    "    \n",
+    "   <tr>\n",
+    "        <td> **Layer L-1** </td> \n",
+    "        <td> $(n^{[L-1]}, n^{[L-2]})$ </td> \n",
+    "        <td> $(n^{[L-1]}, 1)$  </td> \n",
+    "        <td>$Z^{[L-1]} =  W^{[L-1]} A^{[L-2]} + b^{[L-1]}$ </td> \n",
+    "        <td> $(n^{[L-1]}, 209)$ </td> \n",
+    "    <tr>\n",
+    "    \n",
+    "    \n",
+    "   <tr>\n",
+    "        <td> **Layer L** </td> \n",
+    "        <td> $(n^{[L]}, n^{[L-1]})$ </td> \n",
+    "        <td> $(n^{[L]}, 1)$ </td>\n",
+    "        <td> $Z^{[L]} =  W^{[L]} A^{[L-1]} + b^{[L]}$</td>\n",
+    "        <td> $(n^{[L]}, 209)$  </td> \n",
+    "    <tr>\n",
+    "\n",
+    "</table>\n",
+    "\n",
+    "回顾一下，当我们使用numpy计算 $W X + b$ 时，它会使用广播机制。例如，如果： \n",
+    "\n",
+    "$$ W = \\begin{bmatrix}\n",
+    "    j  & k  & l\\\\\n",
+    "    m  & n & o \\\\\n",
+    "    p  & q & r \n",
+    "\\end{bmatrix}\\;\\;\\; X = \\begin{bmatrix}\n",
+    "    a  & b  & c\\\\\n",
+    "    d  & e & f \\\\\n",
+    "    g  & h & i \n",
+    "\\end{bmatrix} \\;\\;\\; b =\\begin{bmatrix}\n",
+    "    s  \\\\\n",
+    "    t  \\\\\n",
+    "    u\n",
+    "\\end{bmatrix}\\tag{2}$$\n",
+    "\n",
+    "那么 $WX + b$ 的结果是：\n",
+    "\n",
+    "$$ WX + b = \\begin{bmatrix}\n",
+    "    (ja + kd + lg) + s  & (jb + ke + lh) + s  & (jc + kf + li)+ s\\\\\n",
+    "    (ma + nd + og) + t & (mb + ne + oh) + t & (mc + nf + oi) + t\\\\\n",
+    "    (pa + qd + rg) + u & (pb + qe + rh) + u & (pc + qf + ri)+ u\n",
+    "\\end{bmatrix}\\tag{3}  $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**练习**: 实现L层神经网络的参数初始化\n",
+    "\n",
+    "**指令**：\n",
+    "- 模型的结构为 *[LINEAR -> RELU] $ \\times$ (L-1) -> LINEAR -> SIGMOID*。也就是说，前 $L-1$ 层使用ReLU激活函数，而输出层使用sigmoid激活函数。\n",
+    "- 权重矩阵使用随机初始化。调用 `np.random.rand(shape) * 0.01`。\n",
+    "- 截距向量使用0值初始化。调用 `np.zeros(shape)`。\n",
+    "- 我们会在变量 `layer_dims` 中保存 $n^{[l]}$，也即不同层神经元的数量。\n",
+    "- 下面是 $L=1$ 时的实现。可以根据这个例子推广到 $L$ 为任意正正数的情况\n",
+    "```python\n",
+    "    if L == 1:\n",
+    "        parameters[\"W\" + str(L)] = np.random.randn(layer_dims[1], layer_dims[0]) * 0.01\n",
+    "        parameters[\"b\" + str(L)] = np.zeros((layer_dims[1], 1))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: initialize_parameters_deep\n",
+    "\n",
+    "def initialize_parameters_deep(layer_dims):\n",
+    "    \"\"\"\n",
+    "    Arguments:\n",
+    "    layer_dims -- python array (list) containing the dimensions of each layer in our network\n",
+    "    \n",
+    "    Returns:\n",
+    "    parameters -- python dictionary containing your parameters \"W1\", \"b1\", ..., \"WL\", \"bL\":\n",
+    "                    Wl -- weight matrix of shape (layer_dims[l], layer_dims[l-1])\n",
+    "                    bl -- bias vector of shape (layer_dims[l], 1)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    np.random.seed(3)\n",
+    "    parameters = {}\n",
+    "    L = len(layer_dims)            # number of layers in the network\n",
+    "\n",
+    "    for l in range(1, L):\n",
+    "        ### START CODE HERE ### (≈ 2 lines of code)\n",
+    "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l-1]) * 0.01\n",
+    "        parameters['b' + str(l)] = np.zeros((layer_dims[l], 1))\n",
+    "        ### END CODE HERE ###\n",
+    "        \n",
+    "        assert(parameters['W' + str(l)].shape == (layer_dims[l], layer_dims[l-1]))\n",
+    "        assert(parameters['b' + str(l)].shape == (layer_dims[l], 1))\n",
+    "\n",
+    "        \n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[ 0.01788628  0.0043651   0.00096497 -0.01863493 -0.00277388]\n",
+      " [-0.00354759 -0.00082741 -0.00627001 -0.00043818 -0.00477218]\n",
+      " [-0.01313865  0.00884622  0.00881318  0.01709573  0.00050034]\n",
+      " [-0.00404677 -0.0054536  -0.01546477  0.00982367 -0.01101068]]\n",
+      "b1 = [[ 0.]\n",
+      " [ 0.]\n",
+      " [ 0.]\n",
+      " [ 0.]]\n",
+      "W2 = [[-0.01185047 -0.0020565   0.01486148  0.00236716]\n",
+      " [-0.01023785 -0.00712993  0.00625245 -0.00160513]\n",
+      " [-0.00768836 -0.00230031  0.00745056  0.01976111]]\n",
+      "b2 = [[ 0.]\n",
+      " [ 0.]\n",
+      " [ 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters = initialize_parameters_deep([5,4,3])\n",
+    "print(\"W1 = \" + str(parameters[\"W1\"]))\n",
+    "print(\"b1 = \" + str(parameters[\"b1\"]))\n",
+    "print(\"W2 = \" + str(parameters[\"W2\"]))\n",
+    "print(\"b2 = \" + str(parameters[\"b2\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "       \n",
+    "<table style=\"width:80%\">\n",
+    "  <tr>\n",
+    "    <td> **W1** </td>\n",
+    "    <td>[[ 0.01788628  0.0043651   0.00096497 -0.01863493 -0.00277388]\n",
+    " [-0.00354759 -0.00082741 -0.00627001 -0.00043818 -0.00477218]\n",
+    " [-0.01313865  0.00884622  0.00881318  0.01709573  0.00050034]\n",
+    " [-0.00404677 -0.0054536  -0.01546477  0.00982367 -0.01101068]]</td> \n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>**b1** </td>\n",
+    "    <td>[[ 0.]\n",
+    " [ 0.]\n",
+    " [ 0.]\n",
+    " [ 0.]]</td> \n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>**W2** </td>\n",
+    "    <td>[[-0.01185047 -0.0020565   0.01486148  0.00236716]\n",
+    " [-0.01023785 -0.00712993  0.00625245 -0.00160513]\n",
+    " [-0.00768836 -0.00230031  0.00745056  0.01976111]]</td> \n",
+    "  </tr>\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td>**b2** </td>\n",
+    "    <td>[[ 0.]\n",
+    " [ 0.]\n",
+    " [ 0.]]</td> \n",
+    "  </tr>\n",
+    "  \n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
