--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -576,6 +576,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9.4 前向传播模块\n",
+    "\n",
+    "#### 9.4.1 线性前向传播 \n",
+    "有了初始化的参数之后，就可以开始开发前向传播的模块。首先我们需要按顺序实现一些基本的函数：\n",
+    "\n",
+    "- LINEAR\n",
+    "- LINEAR -> ACTIVATION 其中激活函数可以是 ReLU 或 Sigmoid. \n",
+    "- [LINEAR -> RELU] $\\times$ (L-1) -> LINEAR -> SIGMOID 整个前向传播过程\n",
+    "\n",
+    "前向传播模块的计算公式是：\n",
+    "\n",
+    "$$Z^{[l]} = W^{[l]}A^{[l-1]} +b^{[l]}\\tag{4}$$\n",
+    "\n",
+    "其中 $A^{[0]} = X$. \n",
+    "\n",
+    "**练习**: 构建前向传播的线性部分"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: linear_forward\n",
+    "\n",
+    "def linear_forward(A, W, b):\n",
+    "    \"\"\"\n",
+    "    Implement the linear part of a layer's forward propagation.\n",
+    "\n",
+    "    Arguments:\n",
+    "    A -- activations from previous layer (or input data): (size of previous layer, number of examples)\n",
+    "    W -- weights matrix: numpy array of shape (size of current layer, size of previous layer)\n",
+    "    b -- bias vector, numpy array of shape (size of the current layer, 1)\n",
+    "\n",
+    "    Returns:\n",
+    "    Z -- the input of the activation function, also called pre-activation parameter \n",
+    "    cache -- a python dictionary containing \"A\", \"W\" and \"b\" ; stored for computing the backward pass efficiently\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### START CODE HERE ### (≈ 1 line of code)\n",
+    "    Z = np.dot(W, A) + b\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    assert(Z.shape == (W.shape[0], A.shape[1]))\n",
+    "    cache = (A, W, b)\n",
+    "    \n",
+    "    return Z, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = [[ 3.26295337 -1.23429987]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A, W, b = linear_forward_test_case()\n",
+    "\n",
+    "Z, linear_cache = linear_forward(A, W, b)\n",
+    "print(\"Z = \" + str(Z))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table style=\"width:35%\">\n",
+    "  \n",
+    "  <tr>\n",
+    "    <td> **Z** </td>\n",
+    "    <td> [[ 3.26295337 -1.23429987]] </td> \n",
+    "  </tr>\n",
+    "  \n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
