--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -670,13 +670,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### 9.4.2 线性-激活 前向传播\n",
+    "\n",
+    "在这个notebook中，我们将会使用两种激活函数：\n",
+    "\n",
+    "- **Sigmoid**: $\\sigma(Z) = \\sigma(W A + b) = \\frac{1}{ 1 + e^{-(W A + b)}}$。我们已经引入了 `sigmoid` 函数。这个函数返回 **两个** 变量：激活值 \"`a`\" 和缓存 \"`cache`\"，缓存中包含了 \"`Z`\" (在反向传播中会用到)。按照下面的方法调用函数即可\n",
+    "``` python\n",
+    "A, activation_cache = sigmoid(Z)\n",
+    "```\n",
+    "\n",
+    "- **ReLU**: ReLU的数学公式是 $A = RELU(Z) = max(0, Z)$。同样的， `relu` 函数已经在上面引入了，这个函数也返回 **两个** 变量：激活值 \"`a`\" 和缓存 \"`cache`\"，缓存中包含了 \"`Z`\" (在反向传播中会用到)。按照下面的方法调用函数即可\n",
+    "``` python\n",
+    "A, activation_cache = relu(Z)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "为了使用方便，我们会将线性组合函数和激活函数组合成一个线性-激活函数。因此，下面的实现会首先进行线性组合，接着进行激活。\n",
+    "\n",
+    "**练习**：实现 *LINEAR->ACTIVATION* 的前向传播过程。数学公式为：A^{[l]} = g(Z^{[l]}) = g(W^{[l]}A^{[l-1]} +b^{[l]})$ 其中激活函数 \"g\" 可以是 sigmoid() 或 relu()。调用 linear_forward() 以及相应的激活函数。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# GRADED FUNCTION: linear_activation_forward\n",
+    "\n",
+    "def linear_activation_forward(A_prev, W, b, activation):\n",
+    "    \"\"\"\n",
+    "    Implement the forward propagation for the LINEAR->ACTIVATION layer\n",
+    "\n",
+    "    Arguments:\n",
+    "    A_prev -- activations from previous layer (or input data): (size of previous layer, number of examples)\n",
+    "    W -- weights matrix: numpy array of shape (size of current layer, size of previous layer)\n",
+    "    b -- bias vector, numpy array of shape (size of the current layer, 1)\n",
+    "    activation -- the activation to be used in this layer, stored as a text string: \"sigmoid\" or \"relu\"\n",
+    "\n",
+    "    Returns:\n",
+    "    A -- the output of the activation function, also called the post-activation value \n",
+    "    cache -- a python dictionary containing \"linear_cache\" and \"activation_cache\";\n",
+    "             stored for computing the backward pass efficiently\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if activation == \"sigmoid\":\n",
+    "        # Inputs: \"A_prev, W, b\". Outputs: \"A, activation_cache\".\n",
+    "        ### START CODE HERE ### (≈ 2 lines of code)\n",
+    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
+    "        A, activation_cache = sigmoid(Z)\n",
+    "        ### END CODE HERE ###\n",
+    "    \n",
+    "    elif activation == \"relu\":\n",
+    "        # Inputs: \"A_prev, W, b\". Outputs: \"A, activation_cache\".\n",
+    "        ### START CODE HERE ### (≈ 2 lines of code)\n",
+    "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
+    "        A, activation_cache = relu(Z)\n",
+    "        ### END CODE HERE ###\n",
+    "    \n",
+    "    assert (A.shape == (W.shape[0], A_prev.shape[1]))\n",
+    "    cache = (linear_cache, activation_cache)\n",
+    "\n",
+    "    return A, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With sigmoid: A = [[ 0.96890023  0.11013289]]\n",
+      "With ReLU: A = [[ 3.43896131  0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A_prev, W, b = linear_activation_forward_test_case()\n",
+    "\n",
+    "A, linear_activation_cache = linear_activation_forward(A_prev, W, b, activation = \"sigmoid\")\n",
+    "print(\"With sigmoid: A = \" + str(A))\n",
+    "\n",
+    "A, linear_activation_cache = linear_activation_forward(A_prev, W, b, activation = \"relu\")\n",
+    "print(\"With ReLU: A = \" + str(A))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "       \n",
+    "<table style=\"width:35%\">\n",
+    "  <tr>\n",
+    "    <td> **With sigmoid: A ** </td>\n",
+    "    <td > [[ 0.96890023  0.11013289]]</td> \n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td> **With ReLU: A ** </td>\n",
+    "    <td > [[ 3.43896131  0.        ]]</td> \n",
+    "  </tr>\n",
+    "</table>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**注意**：在深度学习zhongIn deep learning, the \"[LINEAR->ACTIVATION]\" computation is counted as a single layer in the neural network, not two layers. "
+   ]
   }
  ],
  "metadata": {
