--- a/Deep Neural Network.ipynb
+++ b/Deep Neural Network.ipynb
@@ -793,8 +793,132 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**注意**：在深度学习zhongIn deep learning, the \"[LINEAR->ACTIVATION]\" computation is counted as a single layer in the neural network, not two layers. "
+    "**注意**：在深度学习中，\"[LINEAR->ACTIVATION]\" 的计算过程是神经网络中的一层，而不是两层。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9.4.3 L层的模型\n",
+    "\n",
+    "为了L层神经网络模型的使用便利，我们需要一个函数重复上面的步骤（使用ReLU的 `linear_activation_forward`） $L-1$ 次，之后再计算一次使用SIGMOID的 `linear_activation_forward`。\n",
+    "\n",
+    "<img src=\"img/model_architecture_kiank.png\" style=\"width:600px;height:300px;\">\n",
+    "<caption><center> **图 2** : *[LINEAR -> RELU] $\\times$ (L-1) -> LINEAR -> SIGMOID* model</center></caption><br>\n",
+    "\n",
+    "**练习**：实现上面这个模型的前向传播。\n",
+    "\n",
+    "**指令**：在上面的代码块中，变量 `AL` 表示 $A^{[L]} = \\sigma(Z^{[L]}) = \\sigma(W^{[L]} A^{[L-1]} + b^{[L]})$. (有时也命名为 `Yhat`，即 $\\hat{Y}$) \n",
+    "\n",
+    "**提示**:\n",
+    "- 使用上面实现过的函数 \n",
+    "- 重复 [LINEAR->RELU] (L-1) 次的过程可以使用循环\n",
+    "- 将每层计算产生的缓存保存在 \"caches\" 列表中"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: L_model_forward\n",
+    "\n",
+    "def L_model_forward(X, parameters):\n",
+    "    \"\"\"\n",
+    "    Implement forward propagation for the [LINEAR->RELU]*(L-1)->LINEAR->SIGMOID computation\n",
+    "    \n",
+    "    Arguments:\n",
+    "    X -- data, numpy array of shape (input size, number of examples)\n",
+    "    parameters -- output of initialize_parameters_deep()\n",
+    "    \n",
+    "    Returns:\n",
+    "    AL -- last post-activation value\n",
+    "    caches -- list of caches containing:\n",
+    "                every cache of linear_relu_forward() (there are L-1 of them, indexed from 0 to L-2)\n",
+    "                the cache of linear_sigmoid_forward() (there is one, indexed L-1)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    caches = []\n",
+    "    A = X\n",
+    "    L = len(parameters) // 2                  # number of layers in the neural network\n",
+    "    \n",
+    "    # Implement [LINEAR -> RELU]*(L-1). Add \"cache\" to the \"caches\" list.\n",
+    "    for l in range(1, L):\n",
+    "        A_prev = A \n",
+    "        ### START CODE HERE ### (≈ 2 lines of code)\n",
+    "        A, cache = linear_activation_forward(A_prev, parameters['W' + str(l)], parameters['b' + str(l)], 'relu')\n",
+    "        caches.append(cache)\n",
+    "        ### END CODE HERE ###\n",
+    "    \n",
+    "    # Implement LINEAR -> SIGMOID. Add \"cache\" to the \"caches\" list.\n",
+    "    ### START CODE HERE ### (≈ 2 lines of code)\n",
+    "    AL, cache = linear_activation_forward(A, parameters[\"W\" + str(L)], parameters[\"b\" + str(L)], 'sigmoid')\n",
+    "    caches.append(cache)\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    assert(AL.shape == (1,X.shape[1]))\n",
+    "            \n",
+    "    return AL, caches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AL = [[ 0.03921668  0.70498921  0.19734387  0.04728177]]\n",
+      "Length of caches list = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, parameters = L_model_forward_test_case_2hidden()\n",
+    "AL, caches = L_model_forward(X, parameters)\n",
+    "print(\"AL = \" + str(AL))\n",
+    "print(\"Length of caches list = \" + str(len(caches)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<table style=\"width:50%\">\n",
+    "  <tr>\n",
+    "    <td> **AL** </td>\n",
+    "    <td > [[ 0.03921668  0.70498921  0.19734387  0.04728177]]</td> \n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td> **Length of caches list ** </td>\n",
+    "    <td > 3 </td> \n",
+    "  </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "好的，这样我们就给定输入 X 可以获得作为输出的一个行向量 $A^{[L]}$，这个向量中包含了模型的预测值。同时，所有的中间结果保存在 \"caches\" 变量中。使用 $A^{[L]}$ 可以计算预测的成本。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
